fix the z-index bug, on the canvasJS detail number

--- a/styles/build.css
+++ b/styles/build.css
@@ -530,7 +530,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .main-table tbody tr {
   cursor: pointer;
-  border-top-width: 1px;
   border-bottom-width: 1px;
   --tw-border-opacity: 1;
   border-color: rgb(58 80 84 / var(--tw-border-opacity));
@@ -721,10 +720,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   position: fixed;
 }
 
-.absolute {
-  position: absolute;
-}
-
 .relative {
   position: relative;
 }
@@ -744,28 +739,24 @@ Ensure the default browser behavior of the `hidden` attribute.
   right: 0px;
 }
 
-.top-1\/2 {
-  top: 50%;
+.z-\[99999\] {
+  z-index: 99999;
 }
 
-.right-0\.5 {
-  right: 0.125rem;
-}
-
-.z-50 {
-  z-index: 50;
+.z-\[2000\] {
+  z-index: 2000;
 }
 
 .z-30 {
   z-index: 30;
 }
 
-.z-10 {
-  z-index: 10;
-}
-
 .z-20 {
   z-index: 20;
+}
+
+.z-10 {
+  z-index: 10;
 }
 
 .my-2 {
@@ -776,10 +767,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 .my-9 {
   margin-top: 2.25rem;
   margin-bottom: 2.25rem;
-}
-
-.mt-2 {
-  margin-top: 0.5rem;
 }
 
 .mb-5 {
@@ -864,11 +851,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .border-collapse {
   border-collapse: collapse;
-}
-
-.-translate-y-1\/2 {
-  --tw-translate-y: -50%;
-  transform: var(--tw-transform);
 }
 
 .translate-y-\[75px\] {
@@ -963,11 +945,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   border-bottom-left-radius: 0.5rem;
 }
 
-.rounded-b-md {
-  border-bottom-right-radius: 0.375rem;
-  border-bottom-left-radius: 0.375rem;
-}
-
 .bg-slate-50 {
   --tw-bg-opacity: 1;
   background-color: rgb(248 250 252 / var(--tw-bg-opacity));
@@ -987,14 +964,14 @@ Ensure the default browser behavior of the `hidden` attribute.
   background-color: transparent;
 }
 
-.bg-white {
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}
-
 .bg-primary-black {
   --tw-bg-opacity: 1;
   background-color: rgb(58 80 84 / var(--tw-bg-opacity));
+}
+
+.bg-white {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
 .object-cover {
@@ -1010,11 +987,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 .px-3 {
   padding-left: 0.75rem;
   padding-right: 0.75rem;
-}
-
-.px-2 {
-  padding-left: 0.5rem;
-  padding-right: 0.5rem;
 }
 
 .py-\[108px\] {
